<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minha biblioteca</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="minha_colecao">Minha coleção</string>
    <string name="adicionar">Adicionar</string>
    
    <string name="titulo">Título:</string>
    <string name="autor">Autor:</string>
    <string name="resumo">Resumo:</string>
    <string name="avaliacao">Avaliação:</string>
    <string name="inserir_imagem">Galeria</string>
    <string name="capturar_imagem">Foto</string>

</resources>
